# xiaoyuzhou-codex

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: podcast-radar.yml
config/: config.example.json  private.example.json
skills/xiaoyuzhou-podcast-radar/: SKILL.md
skills/xiaoyuzhou-podcast-radar/agents/: openai.yaml
skills/xiaoyuzhou-podcast-radar/references/: automation-prompts.md  configuration.md
skills/xiaoyuzhou-podcast-radar/scripts/: run.py
src/xiaoyuzhou_codex/: __init__.py  cli.py  commands.py  config.py  deep_dive.py  email_delivery.py  engine.py  feishu.py  http.py  models.py  report.py  rss.py  scoring.py  store.py
tests/: test_cli.py  test_core.py  test_integrations.py
tests/fixtures/: real-hidden-brain.json
