[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xiaoyuzhou-codex"
version = "0.1.0"
description = "RSS-first podcast radar with Feishu delivery and Codex skill orchestration"
requires-python = ">=3.11"

[project.scripts]
xyz-codex = "xiaoyuzhou_codex.cli:main"

[tool.setuptools.packages.find]
where = ["src"]


